[project]
name = "bouncing-decayer-optimizer"
version = "1.0.0"
description = "A physics-inspired optimizer adding decaying oscillations to gradient descent"
authors = [
    { name="Sanskar", email="sawanesanskar07@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "torch>=1.7"
]
keywords = ["optimizer", "deep learning", "physics-inspired", "gradient descent", "pytorch"]

[project.urls]
Homepage = "https://github.com/sandy1279/bouncing_decayer_optimizer"
Repository = "https://github.com/sandy1279/bouncing_decayer_optimizer"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
